fix align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2632,7 +2632,6 @@ input, select, textarea {
 		}
 
 		#header h1 {
-			text-align: right;
 			color: rgba(255, 255, 255, 0.5);
 			font-size: 1.35em;
 			line-height: 1.75em;
@@ -2641,7 +2640,7 @@ input, select, textarea {
 
 		#header .image.avatar {
 			display: center;
-			margin: 0 1em 1em 0;
+			margin: 0 0 1em 0;
 			width: 8em;
 		}
 
